* app/composite/Makefile (regenerate): Updated make-installer.py command line to take advantage of the new compile time method of determining which instruction set to compile.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14089 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-20  Helvetix Victorinox  <helvetix@gimp.org>
 
+	* app/composite/Makefile (regenerate): Updated make-installer.py
+	command line to take advantage of the new compile time method of
+	determining which instruction set to compile.
+
 	* app/composite/gimp-composite.c (gimp_composite_init): Print the
 	list of active instruction sets if the --verbose command line
 	switch is ON (via be_verbose)
