* app/composite/Makefile.am (regenerate): Updated make-installer.py command line to take advantage of the new compile time method of determining which instruction set to compile.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14091 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-07-20  Helvetix Victorinox  <helvetix@gimp.org>
 
-	* app/composite/Makefile (regenerate): Updated make-installer.py
+	* app/composite/Makefile.am (regenerate): Updated make-installer.py
 	command line to take advantage of the new compile time method of
 	determining which instruction set to compile.
 
