* plug-ins/gimpressionist/presets.c: fixed the incorrect strings for input and output of the preset's fields. (a relic of an irresponsible search-and-replace script). * plug-ins/gimpressionist/: normalized the identifiers of orientmap.c.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14092 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-20  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/presets.c: fixed the incorrect strings
+	for input and output of the preset's fields. (a relic of an
+	irresponsible search-and-replace script).
+	* plug-ins/gimpressionist/: normalized the identifiers of 
+	orientmap.c.
+
 2004-07-20  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* app/composite/Makefile.am (regenerate): Updated make-installer.py
