2004-07-20  Michael Natterer  <mitch@gimp.org>
	* app/actions/tools-actions.c: added an icon to the
	"tools-visibility" action.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14094 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/tools-actions.c: added an icon to the
+	"tools-visibility" action.
+
 2004-07-20  Sven Neumann  <sven@gimp.org>
 
 	* app/composite/gimp-composite.c (gimp_composite_init): now that
