2004-07-20  Michael Natterer  <mitch@gimp.org>
	* app/actions/image-actions.c: make sure that the "image-new" and
	"image-new-from-image" actions always have the same shortcut.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14096 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/image-actions.c: make sure that the "image-new" and
+	"image-new-from-image" actions always have the same shortcut.
+
 2004-07-20  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/Lighting/lighting_main.c
