2004-07-20  Sven Neumann  <sven@gimp.org>
	* configure.in (ALL_LINGUAS): added back "pa" for Punjabi now that
	the missing po files have been added (tips/pa.po is still missing
	though).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14098 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-20  Sven Neumann  <sven@gimp.org>
+
+	* configure.in (ALL_LINGUAS): added back "pa" for Punjabi now that
+	the missing po files have been added (tips/pa.po is still missing
+	though).
+
 2004-07-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpactionfactory.[ch]
