--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: added GimpActionView and GimpCellRendererAccel.
+
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-sections.txt: GimpPaintCoreState -> GimpPaintState.
