2004-07-21  Michael Natterer  <mitch@gimp.org>
	* app/actions/context-actions.c: changed names of actions which
	select brushes, patterns etc. from e.g. "context-brush-first" to
	"context-brush-select-first".

	* menus/image-menu.xml.in: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14103 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-07-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/context-actions.c: changed names of actions which
+	select brushes, patterns etc. from e.g. "context-brush-first" to
+	"context-brush-select-first".
+
+	* menus/image-menu.xml.in: changed accordingly.
+
+2004-07-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/preferences-dialog.c: remember the keyboard shortcut
 	dialog and show it only once.
 
