* plug-ins/gimpressionist/: normalized the identifiers in placement.c.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14104 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-21  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/: normalized the identifiers in 
+	placement.c.
+
 2004-07-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/context-actions.c: changed names of actions which
