--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-21  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/gif.c: declared global const variable as static.
+	Fixes compiler warnings seen with gcc 3.4.1 (don't ask me why).
+
 2004-07-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimptemplateeditor.c
