2004-07-22  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpactionview.c: rephrased the text for the dialog
	that appears if a new shortcut collides with an existing one.

	* libgimpcolor/gimprgb.[ch]: added new function gimp_rgb_parse_name()
	which accepts RGB colors in hexadezimal notation or as SVG color
	keywords.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14115 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-22  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpactionview.c: rephrased the text for the dialog
+	that appears if a new shortcut collides with an existing one.
+
+	* libgimpcolor/gimprgb.[ch]: added new function gimp_rgb_parse_name()
+	which accepts RGB colors in hexadezimal notation or as SVG color
+	keywords.
+
 2004-07-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_resume):
